--- a/inst/rmarkdown/templates/html/resources/common.css
+++ b/inst/rmarkdown/templates/html/resources/common.css
@@ -22,6 +22,13 @@ h3.subtitle {
   margin-top: 0.5rem;
 }
 
+h3.course {
+  font-size: 1rem;
+  font-weight: normal;
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
 h4.author {
   font-size: 1rem;
   font-weight: normal;
